  and locale because that is inconsistent and may get undesired values
  back, ie getting a different Timestamp object back because of a different
  user time zone.
- Added screen.@tenants-allowed attribute to restrict which tenant(s) a
  screen may be used in. The tools application is now restricted to the
  DEFAULT tenant using this attribute in Tools.xml.

Bug Fixes:

- Changed commit() to rollback if commit fails to cleanup the transaction,
  can happen for example with TransactionCache has a DB error during
  pre-commit.
- ArtifactHit count now skipped for UserAccount to avoid infinite recursion
  (shows as a StackOverflow exception).
- EntityValue.containsKey() now returns true if there is a value for the
  key (even null), not just if it is a valid field name; this was
  inconvenient for various things, especially when treating EntityValue
  like a Map.
- Fixed issue where Service ECA rules with @when of tx-commit or
  tx-rollback were never run.
- Fixed issue with primary sequenced ID where cached current bank was
  shared among tenants even though DB values were separate, now cached
  current bank is also separate.
- Fixed GitHub issue #26 where the Calendar used for setting Date/etc
  values was not valid because the cached Calendar object in UserFacadeImpl
  was set in a query before getting the UserAccount, and not reset by
  getUserAccount() (ie calling clearPerUserValues()).
- Changed Quartz jobs (async and scheduled service calls) to run in the
  tenant they were initiated in instead of always in the DEFAULT tenant
- Fixed issue with setBlob and the Postgres JDBC driver (GitHub issue #28),
  similar to pull request #29.
- Fixed issue where SubscreensItem records with a userGroupId were filtered
  for the user active when the screen is first loaded as opposed to the
  user active each time the screen is rendered.

===========================================================================
Release 1.4.0 - 21 Mar 2014