@@ -143,6 +143,8 @@ This Work includes contributions authored by David E. Jones, not as a
 
                 documentList = []
 
+                if (!indexName.contains("::")) indexName = "${ec.tenantId}::${indexName}".toLowerCase()
+
                 // get the search hits
                 SearchHits hits = ec.elasticSearchClient.prepareSearch().setIndices(indexName).setTypes(documentType)
                         .setQuery(QueryBuilders.queryString(queryString)).setFrom(fromOffset).setSize(sizeLimit).execute().actionGet().getHits()
